Added Resource nodes, db for them, random spawning, and loading bar for harvesting (still needs work)

--- a/plugin.yml
+++ b/plugin.yml
@@ -22,5 +22,8 @@ commands:
       usage: /horse
    lookup:
       description: badass horse
-      usage: /horse      
+      usage: /horse
+   resource:
+      description: badass horse
+      usage: /horse         
 depend: [Citizens]
